--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Footz</title>
 </head>
 <body>
     <header>
         <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
-        <p>Air Jordan</p>
-        <p>Nike</p>
-        <p>Adidas</p>
+        <a href="#">Air Jordan</a>
+        <a href="#">Nike</a>
+        <a href="#">Adidas</a>
+        <input type="checkbox" id="active">
+                <label for="active" class="menu-btn"><span></span></label>
+                <label for="active" class="close"></label>
+                    <div class="wrapper">
+                        <ul>
+                            <li><a href="#">Jordan</a></li>
+                            <li><a href="#">Nike</a></li>
+                            <li><a href="#">Adidas</a></li>
+                        </ul>
+                    </div>
+        </div>
     </header>
     <main>
         <div class="na-topie">
