--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <title>Footz</title>
+    <link rel="icon" href="images/logo/footz_icon.png" sizes="16x16" type="image/png">
+    <title> Footz</title>
 </head>
 <body>
     <header>
