--- a/index.html
+++ b/index.html
@@ -29,14 +29,30 @@
         </div>
     </header>
     <main>
+        <!--NA TOPIE-->
         <div class="na-topie">
-            <div class="jordan_top">
-                <div class="introduce-jordan">
-                    <span class="introduce-jordan_natopie">Na Topie</span>
+            <div class="categories">
+                <div class="introduce-categories">
+                    <span class="introduce-categories_na-topie">Na Topie</span>
                     <br><hr><br>
                     Buty z firmy <span style="color: black;">Jordan</span> jak zawsze zaskakują. Aktualnie zdobyły bardzo dużą popularność i wiele osób poleca buty Jordana.
                 </div>
                 <img src="images/sneakers_orange_jordan.png" alt="sneakers_orange_jordan">
+            </div>  
+            <div class="kup">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span>Kup</span>
+            </div>  
+        </div>
+        <!--NA LATO-->
+        <div class="na-lato">
+            <div class="categories">
+                <div class="introduce-categories">
+                    <span class="introduce-categories_title">Na Lato</span>
+                    <br><hr><br>
+                    <span style="color: black;">Wygodne, przewiewne, lekkie, modne jak zawsze!</span> Szukasz idealnych butów na lato?
+                </div>
+                <img src="images/nike-zoomx-vaporfly.png" alt="nike-zoomx-vaporfly">
             </div>  
             <div class="kup">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
