--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <br><hr><br>
                     <span style="color: black;">Wygodne, przewiewne, lekkie, modne jak zawsze!</span> Szukasz idealnych butów na lato?
                 </div>
-                <img src="images/nike-zoomx-vaporfly.png" alt="nike-zoomx-vaporfly">
+                <img src="images/nike-zoomx-vaporfly.png" style="width: 600px;" alt="nike-zoomx-vaporfly">
             </div>  
             <div class="kup">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
