--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <body>
     <header>
         <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
-        <a href="#">Air Jordan</a>
-        <a href="#">Nike</a>
-        <a href="#">Adidas</a>
+        <a href="https://www.nike.com/pl/jordan">Jordan</a>
+        <a href="https://www.nike.com/pl/">Nike</a>
+        <a href="https://www.adidas.pl/">Adidas</a>
         <input type="checkbox" id="active">
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
                         <ul>
-                            <li><a href="#">Jordan</a></li>
-                            <li><a href="#">Nike</a></li>
-                            <li><a href="#">Adidas</a></li>
+                            <li><a href="https://www.nike.com/pl/jordan">Jordan</a></li>
+                            <li><a href="https://www.nike.com/pl/">Nike</a></li>
+                            <li><a href="https://www.adidas.pl/">Adidas</a></li>
                         </ul>
                     </div>
         </div>
@@ -39,10 +39,10 @@
                 </div>
                 <img src="images/sneakers_orange_jordan.png" alt="sneakers_orange_jordan">
             </div>  
-            <div class="kup">
+            <a class="kup" href="https://www.nike.com/pl/jordan">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span>Kup</span>
-            </div>  
+                <span class="kup-text">Kup</span>
+            </a>  
         </div>
         <!--NA LATO-->
         <div class="na-lato">
@@ -50,15 +50,36 @@
                 <div class="introduce-categories">
                     <span class="introduce-categories_title">Na Lato</span>
                     <br><hr><br>
-                    <span style="color: black;">Wygodne, przewiewne, lekkie, modne jak zawsze!</span> Szukasz idealnych butów na lato?
+                    <span style="color: black;">Wygodne, ładne, modne jak zawsze!</span> Szukasz idealnych butów na lato?
                 </div>
-                <img src="images/nike-zoomx-vaporfly.png" style="width: 600px;" alt="nike-zoomx-vaporfly">
+                <img src="images/nike-dunk-low-apple.png" style="width: 600px;" alt="nike-zoomx-vaporfly">
             </div>  
-            <div class="kup">
+            <a class="kup" href="https://www.nike.com/pl/">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span>Kup</span>
+                <span class="kup-text">Kup</span>
+            </a>  
+        </div>
+        <!--DO BIEGANIA-->
+        <div class="do-biegania">
+            <div class="categories">
+                <div class="introduce-categories">
+                    <span class="introduce-categories_title">Do biegania</span>
+                    <br><hr><br>
+                    Doskonałe buty do biegania muszą być przede wszytskim <span style="color: black;">wygodne, przewiewne, lekkie, z dobrą podeszwą.</span>
+                </div>
+                <img src="images/adidas-ultra-boost-red.png" style="width: 600px;" alt="nike-zoomx-vaporfly">
             </div>  
+            <a class="kup" href="https://www.adidas.pl/">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+            </a>  
         </div>
     </main>
+    <footer>
+        <a href="https://www.nike.com/pl/jordan">Jordan</a>
+        <a href="https://www.nike.com/pl/">Nike</a>
+        <a href="https://www.adidas.pl/">Adidas</a>
+        <h4 class="autor">©Dawid Ślusarczyk 2022</h4>
+    </footer>
 </body>
 </html>
