--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
                 <label for="active" class="close"></label>
                     <div class="wrapper">
                         <ul>
+                            <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
                             <li><a href="https://www.nike.com/pl/jordan">Jordan</a></li>
                             <li><a href="https://www.nike.com/pl/">Nike</a></li>
                             <li><a href="https://www.adidas.pl/">Adidas</a></li>
+                            <li><a class="menu-categories-natopie" href="https://www.adidas.pl/">Na Topie</a></li>
+                            <li><a class="menu-categories-nalato" href="https://www.adidas.pl/">Na Lato</a></li>
+                            <li><a class="menu-categories-dobiegania" href="https://www.adidas.pl/">Do Biegania</a></li>
                         </ul>
                     </div>
         </div>
@@ -63,7 +67,7 @@
         <div class="do-biegania">
             <div class="categories">
                 <div class="introduce-categories">
-                    <span class="introduce-categories_title">Do biegania</span>
+                    <span class="introduce-categories_title">Do Biegania</span>
                     <br><hr><br>
                     Doskonałe buty do biegania muszą być przede wszytskim <span style="color: black;">wygodne, przewiewne, lekkie, z dobrą podeszwą.</span>
                 </div>
