--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -25,9 +26,9 @@
                             <li><a href="https://www.nike.com/pl/jordan">Jordan</a></li>
                             <li><a href="https://www.nike.com/pl/">Nike</a></li>
                             <li><a href="https://www.adidas.pl/">Adidas</a></li>
-                            <li><a class="menu-categories-natopie" href="https://www.adidas.pl/">Na Topie</a></li>
-                            <li><a class="menu-categories-nalato" href="https://www.adidas.pl/">Na Lato</a></li>
-                            <li><a class="menu-categories-dobiegania" href="https://www.adidas.pl/">Do Biegania</a></li>
+                            <li><a class="menu-categories-natopie" href="podstrony/natopie.html">Na Topie</a></li>
+                            <li><a class="menu-categories-nalato" href="podstrony/nalato.html">Na Lato</a></li>
+                            <li><a class="menu-categories-dobiegania" href="podstrony/dobiegania.html">Do Biegania</a></li>
                         </ul>
                     </div>
         </div>
@@ -43,9 +44,9 @@
                 </div>
                 <img src="images/sneakers_orange_jordan.png" alt="sneakers_orange_jordan">
             </div>  
-            <a class="kup" href="https://www.nike.com/pl/jordan">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
+            <a class="zobacz" href="podstrony/natopie.html">
+                <span class="zobacz-text">Zobacz</span>
+                <span class="material-symbols-outlined">arrow_forward_ios</span>
             </a>  
         </div>
         <!--NA LATO-->
@@ -58,9 +59,9 @@
                 </div>
                 <img src="images/nike-dunk-low-apple.png" style="width: 600px;" alt="nike-zoomx-vaporfly">
             </div>  
-            <a class="kup" href="https://www.nike.com/pl/">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
+            <a class="zobacz" href="podstrony/nalato.html">
+                <span class="zobacz-text">Zobacz</span>
+                <span class="material-symbols-outlined">arrow_forward_ios</span>
             </a>  
         </div>
         <!--DO BIEGANIA-->
@@ -73,9 +74,9 @@
                 </div>
                 <img src="images/adidas-ultra-boost-red.png" style="width: 600px;" alt="nike-zoomx-vaporfly">
             </div>  
-            <a class="kup" href="https://www.adidas.pl/">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
+            <a class="zobacz" href="podstrony/dobiegania.html">
+                <span class="zobacz-text">Zobacz</span>
+                <span class="material-symbols-outlined">arrow_forward_ios</span>
             </a>  
         </div>
     </main>
