--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
     <header>
         <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
-        <a href="https://www.nike.com/pl/jordan">Jordan</a>
-        <a href="https://www.nike.com/pl/">Nike</a>
-        <a href="https://www.adidas.pl/">Adidas</a>
+        <a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a>
+        <a href="https://www.nike.com/pl/" target="_blank">Nike</a>
+        <a href="https://www.adidas.pl/" target="_blank">Adidas</a>
         <input type="checkbox" id="active">
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
                         <ul>
                             <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
-                            <li><a href="https://www.nike.com/pl/jordan">Jordan</a></li>
-                            <li><a href="https://www.nike.com/pl/">Nike</a></li>
-                            <li><a href="https://www.adidas.pl/">Adidas</a></li>
+                            <li><a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a></li>
+                            <li><a href="https://www.nike.com/pl/" target="_blank">Nike</a></li>
+                            <li><a href="https://www.adidas.pl/" target="_blank">Adidas</a></li>
                             <li><a class="menu-categories-natopie" href="podstrony/natopie.html">Na Topie</a></li>
                             <li><a class="menu-categories-nalato" href="podstrony/nalato.html">Na Lato</a></li>
                             <li><a class="menu-categories-dobiegania" href="podstrony/dobiegania.html">Do Biegania</a></li>
@@ -81,9 +81,9 @@
         </div>
     </main>
     <footer>
-        <a href="https://www.nike.com/pl/jordan">Jordan</a>
-        <a href="https://www.nike.com/pl/">Nike</a>
-        <a href="https://www.adidas.pl/">Adidas</a>
+        <a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a>
+        <a href="https://www.nike.com/pl/" target="_blank">Nike</a>
+        <a href="https://www.adidas.pl/" target="_blank">Adidas</a>
         <h4 class="autor">©Dawid Ślusarczyk 2022</h4>
     </footer>
 </body>
