--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="icon" href="images/logo/footz_icon.png" sizes="16x16" type="image/png">
     <title> Footz</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-231759180-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-231759180-1');
+</script>
 </head>
 <body>
     <header>
