--- a/podstrony/nalato.html
+++ b/podstrony/nalato.html
@@ -43,124 +43,45 @@
     <main>
         <div class="main-div-categories">
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/adidas-originals-nmd-r1.png" alt="footz_logo">
+                <p>ADIDAS ORIGINALS NMD_R1</p>
+                <a class="kup" href="https://www.zalando.pl/adidas-originals-nmd_r1-sneakersy-niskie-core-blacksolar-red-ad115o11z-q11.html?size=36&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1031025||g|c||555078498652||pla|AD115O11Z-Q110035000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiML9OSOS8bHP5ntpOHf7OAdqRGClPlXp0mg8XKbfBXUMXVjYDId5ysaArjpEALw_wcB">
                 <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/nike-air-huarache.png" alt="footz_logo">
+                <p>NIKE AIR HUARACHE</p>
+                <a class="kup" href="https://www.zalando.pl/nike-sportswear-sneakersy-niskie-smoke-grey-metallic-silver-lt-photo-blue-ni112o0rg-c11.html?size=40.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1011539||g|c||555078498652||pla|NI112O0RG-C110405000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiO4UKObRExtBJcCFLVnRtanQ4dbZvh4nqN4w5_Z1FGsoIjqtLcwJN4aAh-iEALw_wcB">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/nike-air-max-bolt.png" alt="footz_logo">
+                <p>NIKE AIR MAX BOLT</p>
+                <a class="kup" href="https://www.spartoo.pl/Nike-NIKE-AIR-MAX-BOLT-x20297202.php">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/nike-air-force-1.png" alt="footz_logo">
+                <p>NIKE AIR FORCE 1</p>
+                <a class="kup" href="https://www.nike.com/pl/w/air-force-1-buty-5sj3yzy7ok?cp=13410623484_search_%7Cnike+air+force+1%7C10583401142%7C103802095439%7Ce%7Cc%7CPL%7Cstyles%7C454301428978_trade_engine_PL_test">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/adidas-yeezy-boost-350.png" alt="footz_logo">
+                <p>ADIDAS YEEZY BOOST 350</p>
+                <a class="kup" href="https://lovelygrails.pl/products/Adidas-Yeezy-Boost-350-V2-Black-Red-Bred-p367990920?utm_source=GoogleFreeListings&utm_campaign=Kliken+-+Google+Shopping+-+PL+(1)&utm_campaign_id=992916&utm_ad_group_id=951183&utm_prod_id=367990920&utm_mobile=0">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
             </div>
         </div> 
          <!--NA TOPIE-->
