--- a/podstrony/natopie.html
+++ b/podstrony/natopie.html
@@ -43,121 +43,81 @@
     <main>
         <div class="main-div-categories">
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/adidas-originals-nmd-r1.png" alt="footz_logo">
+                <p>ADIDAS ORIGINALS <span class="models">NMD_R1</span></p>
+                <a class="kup" href="https://www.zalando.pl/adidas-originals-nmd_r1-sneakersy-niskie-core-blacksolar-red-ad115o11z-q11.html?size=36&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1031025||g|c||555078498652||pla|AD115O11Z-Q110035000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiML9OSOS8bHP5ntpOHf7OAdqRGClPlXp0mg8XKbfBXUMXVjYDId5ysaArjpEALw_wcB">
                 <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/nike-air-huarache.png" alt="footz_logo">
+                <p>NIKE AIR <span class="models">HUARACHE</span></p>
+                <a class="kup" href="https://www.zalando.pl/nike-sportswear-sneakersy-niskie-smoke-grey-metallic-silver-lt-photo-blue-ni112o0rg-c11.html?size=40.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1011539||g|c||555078498652||pla|NI112O0RG-C110405000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiO4UKObRExtBJcCFLVnRtanQ4dbZvh4nqN4w5_Z1FGsoIjqtLcwJN4aAh-iEALw_wcB">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/nike-air-max-bolt.png" alt="footz_logo">
+                <p>NIKE AIR MAX <span class="models">BOLT</span></p>
+                <a class="kup" href="https://www.spartoo.pl/Nike-NIKE-AIR-MAX-BOLT-x20297202.php">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/nike-air-force-1.png" alt="footz_logo">
+                <p>NIKE AIR FORCE 1</p>
+                <a class="kup" href="https://www.nike.com/pl/w/air-force-1-buty-5sj3yzy7ok?cp=13410623484_search_%7Cnike+air+force+1%7C10583401142%7C103802095439%7Ce%7Cc%7CPL%7Cstyles%7C454301428978_trade_engine_PL_test">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/adidas-yeezy-boost-350.png" alt="footz_logo">
+                <p>ADIDAS YEEZY <span class="models">BOOST 350</span></p>
+                <a class="kup" href="https://lovelygrails.pl/products/Adidas-Yeezy-Boost-350-V2-Black-Red-Bred-p367990920?utm_source=GoogleFreeListings&utm_campaign=Kliken+-+Google+Shopping+-+PL+(1)&utm_campaign_id=992916&utm_ad_group_id=951183&utm_prod_id=367990920&utm_mobile=0">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/nike-air-max-97.png" alt="footz_logo">
+                <p>NIKE AIR MAX <span class="models">97</span></p>
+                <a class="kup" href="https://sneakerspace.pl/pl/p/Nike-Air-Max-97-Czarne-921733-001/2360?utm_source=shoper&utm_medium=shoper-cpc&utm_campaign=shoper-kampanie-google&shop_campaign=1730584139">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/nike-air-force-1-crater-flyknit-next-nature.png" alt="footz_logo">
+                <p>NIKE AIR FORCE 1 <span class="models">CRATER FLYKNIT NEXT NATURE</span></p>
+                <a class="kup" href="https://www.nike.com/pl/t/buty-meskie-air-force-1-crater-flyknit-next-nature-qHncTB/DM0590-100?nikemt=true&cp=35318472452_search_%7c%7c10583401400%7c110102200968%7c%7cc%7cPL%7ccssproducts%7c453128597222&ds_rl=1252249&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiORu_JemM97j58oXaCY0tXPSLX9un8Ul2cjwd1L76cvkFl0M5mzfpEaAjdfEALw_wcB&gclsrc=aw.ds">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/adidas-zx-2k-boost-2.0.png" alt="footz_logo">
+                <p>ZX 2K <span class="models">BOOST 2.0</span></p>
+                <a class="kup" href="https://www.zalando.pl/adidas-originals-sneakersy-niskie-beige-ad115o16e-b11.html?size=42%202/3&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1011539||g|c||555078498652||pla|AD115O16E-B110085000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiOk5v1-8-kIJ8DQs4JAye70CXFuMW_zmtu0h2ji87oEIyvphcjQZg4aAtE3EALw_wcB">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/jordan-series-es.png" alt="footz_logo">
+                <p>JORDAN <span class="models">Series ES</span></p>
+                <a class="kup" href="https://www.zalando.pl/jordan-series-obuwie-do-koszykowki-blackuniversity-redwhitesummit-white-joc43a050-q11.html?size=35.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702385855_137314853268.&opc=2211&mpp=google|v1||pla-1442615911142||1011539||g|c||555008936382||pla|JOC43A050-Q11035Y000|1442615911142|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiMFLGqewpevCTAXQIFWNcl0fhQi7DiZfPu6AeLCQlATrbasb2M6SzkaAje4EALw_wcB">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
-                <span class="kup-text">Kup</span>
-                </a>  
-            </div>
-            <div class="div-categories">
-                <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-                <p>Buty</p>
-                <a class="kup" href="#">
+                <img src="../images/na-lato/jordan-1-low.png" alt="footz_logo">
+                <p>JORDAN 1 <span class="models">LOW</span></p>
+                <a class="kup" href="https://www.zalando.pl/jordan-air-1-sneakersy-niskie-ashen-slatewhitemystic-navy-joc12o006-c13.html">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
