--- a/podstrony/nalato.html
+++ b/podstrony/nalato.html
@@ -41,6 +41,9 @@
         </div>
     </header>
     <main>
+        <div class="na-lato_hd">
+            <p>Na Lato</p>
+        </div>
         <div class="main-div-categories">
             <div class="div-categories">
                 <img src="../images/na-lato/adidas-originals-nmd-r1.png" alt="footz_logo">
