--- a/podstrony/dobiegania.html
+++ b/podstrony/dobiegania.html
@@ -41,6 +41,9 @@
         </div>
     </header>
     <main>
+        <div class="do-biegania_hd">
+            <p>Do Biegania</p>
+        </div>
         <div class="main-div-categories">
             <div class="div-categories">
                 <img src="../images/na-lato/adidas-originals-nmd-r1.png" alt="footz_logo">
