--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
     </header>
     <main>
+        <div></div>
         <!--NA TOPIE-->
         <div class="na-topie">
             <div class="categories">
