--- a/podstrony/nalato.html
+++ b/podstrony/nalato.html
@@ -78,6 +78,14 @@
                 </a>  
             </div>
             <div class="div-categories">
+                <img src="../images/na-lato/nike-zoomx-vaporfly.png" alt="footz_logo">
+                <p>NIKE <span class="models">ZOOMX VAPORFLY</span></p>
+                <a class="kup" target="_blank" href="https://sklepbiegacza.pl/nike-zoomx-vaporfly-next-2-cu4111-002.html?cd=16059063579&ad=134496784484&kd=&gclid=CjwKCAjwqauVBhBGEiwAXOepkaooFZtY57vZbPrQAjRfm7rB7GVCIW43dpsemwZYoU9Pbnf4fvMv2hoCMwsQAvD_BwE">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
                 <img src="../images/na-lato/jordan-stay-loyal.png" alt="footz_logo">
                 <p>JORDAN <span class="models">STAY LOYAL</span></p>
                 <a class="kup" target="_blank" href="https://sklep.sizeer.com/nike-jordan-stay-loyal-meskie-sneakersy-szary-db2884-101?gclid=CjwKCAjwqauVBhBGEiwAXOepkRL09NQHcPTpeOBZVA1OPMotYtXsmp9F_89Xqzcy1LWhdSfv2ibNhhoC8GYQAvD_BwE">
@@ -94,9 +102,25 @@
                 </a>  
             </div>
             <div class="div-categories">
+                <img src="../images/na-lato/jordan-delta-2.png" alt="footz_logo">
+                <p>JORDAN <span class="models">DELTA 2</span></p>
+                <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-delta-2-sneakersy-niskie-blackuniversity-redoff-noirwhitesailmetallic-silver-joc15o002-q11.html">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
                 <img src="../images/na-lato/jordan-delta-2-se.png" alt="footz_logo">
                 <p>JORDAN <span class="models">DELTA 2 SE</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-jordan-delta-2-se-FCxsZ2/DJ9843-004">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/jordan-why-not.5.png" alt="footz_logo">
+                <p>JORDAN <span class="models">WHY NOT.5?</span></p>
+                <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-why-not-5-obuwie-do-koszykowki-blackwatermelonsapphiremint-foam-joc42a04a-q12.html">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
@@ -110,9 +134,9 @@
                 </a>  
             </div>
             <div class="div-categories">
-                <img src="../images/na-lato/nike-zoomx-vaporfly.png" alt="footz_logo">
-                <p>NIKE <span class="models">ZOOMX VAPORFLY</span></p>
-                <a class="kup" target="_blank" href="https://sklepbiegacza.pl/nike-zoomx-vaporfly-next-2-cu4111-002.html?cd=16059063579&ad=134496784484&kd=&gclid=CjwKCAjwqauVBhBGEiwAXOepkaooFZtY57vZbPrQAjRfm7rB7GVCIW43dpsemwZYoU9Pbnf4fvMv2hoCMwsQAvD_BwE">
+                <img src="../images/na-lato/jordan-max-aura-3.png" alt="footz_logo">
+                <p>JORDAN <span class="models">MAX AURA 3</span></p>
+                <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-max-aura-3-sneakersy-wysokie-whiteuniversity-redblack-joc12n01q-a13.html?size=42.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1011539||g|c||555078498652||pla|JOC12N01Q-A130090000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwkruVBhCHARIsACVIiOyse7CujN2s-SJ7v3ophqmlvK0f4FAtMPeoNTft7aKwhJPWkFRB1UMaAr5kEALw_wcB">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
@@ -129,6 +153,14 @@
                 <img src="../images/na-lato/jordan-1-mid.png" alt="footz_logo">
                 <p>JORDAN 1 <span class="models">MID</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-air-jordan-1-mid-QJTvQh/554724-371">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/jordan-1-mid-se.png" alt="footz_logo">
+                <p>JORDAN 1 <span class="models">MID SE</span></p>
+                <a class="kup" target="_blank" href="https://www.snipes.pl/p/jordan-1_mid_se_%28ps%29_-black%2Funiversity_red%2Fwhite%2Fsmoke_grey-00013802066289.html?campaign=ap%2Fmp%2Faff%2F%21%21%21affid%21%21%21&utm_source=AWIN&utm_medium=affiliate&utm_campaign=dpl-affiliate_network-ns-AWIN_%21%21%21affid%21%21%21_awin_%21%21%21affid%21%21%21&utm_content=SNIPES%20PL%20Produktfeed&aaaid=62af6dd60476005c9333d92e&ext_publisher_id=%21%21%21affid%21%21%21&awc=26769_1655664086_151e3c853a597495e261b2c808c27442">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
@@ -158,6 +190,22 @@
                 </a>  
             </div>
             <div class="div-categories">
+                <img src="../images/na-lato/nike-air-max-1.png" alt="footz_logo">
+                <p>NIKE AIR MAX <span class="models">1</span></p>
+                <a class="kup" target="_blank" href="https://www.nike.com/pl/launch/t/air-max-1-light-madder-root-worn-blue">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/nike-air-max-1-x-patta.png" alt="footz_logo">
+                <p>NIKE AIR MAX <span class="models">1 X PATTA</span></p>
+                <a class="kup" target="_blank" href="https://grailpoint.com/product/air-max-1-x-patta/">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
                 <img src="../images/na-lato/jordan-series-es.png" alt="footz_logo">
                 <p>JORDAN <span class="models">Series ES</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-series-obuwie-do-koszykowki-blackuniversity-redwhitesummit-white-joc43a050-q11.html?size=35.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702385855_137314853268.&opc=2211&mpp=google|v1||pla-1442615911142||1011539||g|c||555008936382||pla|JOC43A050-Q11035Y000|1442615911142|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiMFLGqewpevCTAXQIFWNcl0fhQi7DiZfPu6AeLCQlATrbasb2M6SzkaAje4EALw_wcB">
@@ -171,12 +219,20 @@
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-meskie-dunk-low-1xqr6q">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
-                </a>  
+                </a>
             </div>
             <div class="div-categories">
                 <img src="../images/na-lato/jordan-1-low.png" alt="footz_logo">
                 <p>JORDAN 1 <span class="models">LOW</span></p>
-                <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-air-1-sneakersy-niskie-ashen-slatewhitemystic-navy-joc12o006-c13.html">
+                <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-meskie-air-jordan-1-low-9g1Rdg/553558-414">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/jordan-1-low-se.png" alt="footz_logo">
+                <p>JORDAN 1 <span class="models">LOW SE</span></p>
+                <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-meskie-air-jordan-1-low-se-lFcs9M">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
